# rust-stuff

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  template.env
.github/workflows/: cicd.yml
src/: game.rs  main.rs
src/examples/: blog.rs  channels.rs  closure.rs  control_flow.rs  data_types.rs  drop_trait.rs  enums.rs  functions.rs  game.rs  gui.rs  hash_maps.rs  if_let_control_flow.rs  iterations.rs  lifetime.rs  math.rs  methods.rs  mod.rs  mutex.rs  ownership.rs  panic.rs  pattern_matching.rs  range.rs  shadowing.rs  smart_pointers.rs  string.rs  structs.rs  threading.rs  traits_generics.rs  vectors.rs
src/grep/: mod.rs  tool.rs
src/grep/lib/: util.rs
src/grep/tests/: unit.rs
src/grep/types/: structs.rs
src/sqlite/: db.rs  migrations.rs  mod.rs  models.rs  orm.rs  server.rs
src/tests/: add_test.rs  mod.rs  password_test.rs
src/utils/: config.rs  helpers.rs  http_client.rs  mod.rs  password.rs  random.rs  request.rs
