[package]
name = "rust-by-example"
version = "0.1.0"
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
panic = "abort"
# 0-3
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4"
chrono = "0.4.19"
dotenv = "0.15.0"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
cuid = "1.2.0"
actix-web = "4"
